--- a/app/views/aboutyou/PatentRoyaltyPaymentsAgentView.scala.html
+++ b/app/views/aboutyou/PatentRoyaltyPaymentsAgentView.scala.html
@@ -14,28 +14,36 @@
  * limitations under the License.
  *@
 
+@import components._
+
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
     govukErrorSummary: GovukErrorSummary,
     govukRadios: GovukRadios,
-    govukButton: GovukButton
+    govukButton: GovukButton,
+    heading: Heading1,
+    paragraph: ParagraphBody
 )
 
 @(form: Form[_], mode: Mode, taxYear: Int)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("childBenefit.title")), taxYear = taxYear) {
+@layout(pageTitle = title(form, messages("patentRoyaltyPayments.agent.title")), taxYear = taxYear) {
 
-    @formHelper(action = routes.ChildBenefitController.onSubmit(mode, taxYear), Symbol("autoComplete") -> "off") {
+    @formHelper(action = controllers.aboutyou.routes.PatentRoyaltyPaymentsController.onSubmit(mode, taxYear), Symbol("autoComplete") -> "off") {
+
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form))
         }
 
+        @heading(messages("patentRoyaltyPayments.agent.title"))
+        @paragraph(messages("patentRoyaltyPayments.agent.p1"))
+
         @govukRadios(
             RadiosViewModel.yesNo(
                 field = form("value"),
-                legend = LegendViewModel(messages("childBenefit.heading")).asPageHeading()
+                LegendViewModel(messages("patentRoyaltyPayments.agent.title")).visuallyHidden()
             )
         )
 
