css for AddSections task list

--- a/app/views/templates/Layout.scala.html
+++ b/app/views/templates/Layout.scala.html
@@ -53,6 +53,8 @@
     )
 
     <link href="@routes.Assets.versioned("stylesheets/application.css")" media="all" rel="stylesheet" type="text/css" />
+    <link href="@routes.Assets.versioned("stylesheets/taskList.css")" media="all" rel="stylesheet" type="text/css" />
+
 }
 
 @additionalScripts = {
