--- a/.g8/checkboxPage/app/views/$className$AgentView.scala.html
+++ b/.g8/checkboxPage/app/views/$className$AgentView.scala.html
@@ -13,13 +13,14 @@
     @formHelper(action = routes.$className$Controller.onSubmit(mode, taxYear), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
-            @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "value_0")))
+            @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "value")))
         }
 
         @govukCheckboxes(
             CheckboxesViewModel(
                 form   = form,
-                name   = "value",
+                idPrefix = "value",
+                name   = "value[]",
                 legend = LegendViewModel(messages("$className;format="decap"$.agent.heading")).asPageHeading(),
                 items  = $className$.agentCheckboxItems
             )
