--- a/app/views/aboutyou/FosterCarerView.scala.html
+++ b/app/views/aboutyou/FosterCarerView.scala.html
@@ -16,7 +16,6 @@
 
 @import components._
 
-
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
@@ -36,6 +35,9 @@
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form))
         }
+        @heading(messages("fosterCarer.title"))
+
+        @paragraph(messages("fosterCarer.p1"))
 
         @heading(messages("fosterCarer.title"))
         @paragraph(messages("fosterCarer.p1"))
