--- a/app/views/templates/Layout.scala.html
+++ b/app/views/templates/Layout.scala.html
@@ -52,13 +52,13 @@
         } else None
     )
 
-    <link href="@routes.Assets.versioned("stylesheets/application.css")" media="all" rel="stylesheet" type="text/css" />
-    <link href="@routes.Assets.versioned("stylesheets/taskList.css")" media="all" rel="stylesheet" type="text/css" />
+    <link @{CSPNonce.attr} href="@routes.Assets.versioned("stylesheets/application.css")" media="all" rel="stylesheet" type="text/css" />
+    <link @{CSPNonce.attr} href="@routes.Assets.versioned("stylesheets/taskList.css")" media="all" rel="stylesheet" type="text/css" />
 
 }
 
 @additionalScripts = {
-    <script src='@controllers.routes.Assets.versioned("javascripts/application.min.js")'></script>
+    <script @{CSPNonce.attr} src='@controllers.routes.Assets.versioned("javascripts/application.min.js")'></script>
 }
 
 @beforeContent = {
