--- a/app/views/aboutyou/CharitableDonationsAgentView.scala.html
+++ b/app/views/aboutyou/CharitableDonationsAgentView.scala.html
@@ -50,7 +50,7 @@
             @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "CharitableDonations")))
         }
 
-        @heading(messages("charitableDonations.heading"))
+        @heading(messages("charitableDonations.agent.heading"))
 
         @govukDetails(Details(
             summary = Text(messages("charitableDonations.detail.understandingQualifyingShares.summary")),
