--- a/app/views/StartAgentView.scala.html
+++ b/app/views/StartAgentView.scala.html
@@ -30,7 +30,7 @@
 
     @govukButton(
         ButtonViewModel(messages("site.continue"))
-            .asLink(routes.IndexController.onPageLoad(taxYear).url)
+            .asLink(routes.AddSectionsController.onPageLoad(taxYear).url)
             .withCssClass("govuk-!-margin-top-4")
     )
 }
