SASS-6126: Content Creation: Share schemes at your work

--- a/app/views/aboutyou/TaxAvoidanceSchemesAgentView.scala.html
+++ b/app/views/aboutyou/TaxAvoidanceSchemesAgentView.scala.html
@@ -75,7 +75,7 @@
                 form   = form,
                 idPrefix = "TaxAvoidance",
                 name   = "value[]",
-                legend = LegendViewModel(messages("taxAvoidanceSchemes.agent.title")).withSize(LegendSize.Medium),
+                legend = LegendViewModel(messages("taxAvoidanceSchemes.agent.legend")).withSize(LegendSize.Medium),
                 items  = TaxAvoidanceSchemes.agentCheckboxItems
             ).withHint(Hint(content = Text(messages("site.hint.selectAll"))))
         )
