--- a/app/views/workandbenefits/ShareSchemesView.scala.html
+++ b/app/views/workandbenefits/ShareSchemesView.scala.html
@@ -14,12 +14,18 @@
  * limitations under the License.
  *@
 
+@import viewmodels.LegendSize
+@import components._
+
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
     govukErrorSummary: GovukErrorSummary,
     govukRadios: GovukRadios,
-    govukButton: GovukButton
+    govukButton: GovukButton,
+    heading: Heading1,
+    p: ParagraphBody,
+    bullets: BulletList
 )
 
 @(form: Form[_], mode: Mode, taxYear: Int)(implicit request: Request[_], messages: Messages)
@@ -32,10 +38,21 @@
             @govukErrorSummary(ErrorSummaryViewModel(form))
         }
 
+        @heading(messages("shareSchemes.heading"))
+
+        @p(messages("shareSchemes.p1"))
+
+        @bullets(Seq(
+            Html(messages("shareSchemes.bullet1")),
+            Html(messages("shareSchemes.bullet2"))
+        ))
+
+        @p(messages("shareSchemes.p2"))
+
         @govukRadios(
             RadiosViewModel.yesNo(
                 field = form("value"),
-                legend = LegendViewModel(messages("shareSchemes.heading")).asPageHeading()
+                legend = LegendViewModel(messages("shareSchemes.legend")).withSize(LegendSize.Medium)
             )
         )
 
