--- a/app/views/workandbenefits/TaxableStateBenefitsView.scala.html
+++ b/app/views/workandbenefits/TaxableStateBenefitsView.scala.html
@@ -14,15 +14,28 @@
  * limitations under the License.
  *@
 
+@import components._
+@import viewmodels.LegendSize
+
+
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
     govukErrorSummary: GovukErrorSummary,
     govukRadios: GovukRadios,
-    govukButton: GovukButton
+    govukButton: GovukButton,
+    govukDetails: GovukDetails,
+    paragraph: ParagraphBody,
+    heading: Heading1,
+    list: BulletList,
+    p: ParagraphBody
 )
 
 @(form: Form[_], mode: Mode, taxYear: Int)(implicit request: Request[_], messages: Messages)
+
+@insetContent1 = {
+    @paragraph(messages("taxableStateBenefits.details.p1"))
+}
 
 @layout(pageTitle = title(form, messages("taxableStateBenefits.title")), taxYear = taxYear) {
 
@@ -32,10 +45,26 @@
             @govukErrorSummary(ErrorSummaryViewModel(form))
         }
 
+        @heading(messages("taxableStateBenefits.heading"))
+
+        @govukDetails(Details(
+                summary = Text(messages("taxableStateBenefits.details.stateBenefits.summary")),
+                content = HtmlContent(insetContent1)
+            ))
+
+        @list(elements = Seq(
+            Html(messages("taxableStateBenefits.bullet1")),
+            Html(messages("taxableStateBenefits.bullet2")),
+            Html(messages("taxableStateBenefits.bullet3")),
+            Html(messages("taxableStateBenefits.bullet4")),
+            Html(messages("taxableStateBenefits.bullet5"))
+        ))
+
         @govukRadios(
-            RadiosViewModel.yesNo(
+            RadiosViewModel.yesNoConditional(
                 field = form("value"),
-                legend = LegendViewModel(messages("taxableStateBenefits.heading")).asPageHeading()
+                legend = LegendViewModel(messages("taxableStateBenefits.legend")).withSize(LegendSize.Medium),
+                conditional = p(messages("taxableStateBenefits.p.addStateBenefitsSectionToReturn"))
             )
         )
 
