--- a/app/views/UkDividendsSharesAndLoansFromLimitedCompaniesAgentView.scala.html
+++ b/app/views/UkDividendsSharesAndLoansFromLimitedCompaniesAgentView.scala.html
@@ -1,12 +1,56 @@
+@*
+ * Copyright 2023 HM Revenue & Customs
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ *@
+
+@import viewmodels.LegendSize
+@import components._
+@import models.UkDividendsSharesAndLoansFromLimitedCompanies
+
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
     govukErrorSummary: GovukErrorSummary,
     govukCheckboxes: GovukCheckboxes,
-    govukButton: GovukButton
+    govukButton: GovukButton,
+    govukDetails: GovukDetails,
+    heading: Heading1,
+    paragraph: ParagraphBody
 )
 
 @(form: Form[_], mode: Mode, taxYear: Int)(implicit request: Request[_], messages: Messages)
+
+@insetContent1 = {
+    @paragraph(messages("ukDividendsSharesAndLoansFromLimitedCompanies.detail.understandingDividends.p1"))
+}
+
+@insetContent2 = {
+    @paragraph(messages("ukDividendsSharesAndLoansFromLimitedCompanies.detail.understandingDividendsUnitTrustsInvestmentCompanies.p1"))
+    @paragraph(messages("ukDividendsSharesAndLoansFromLimitedCompanies.detail.understandingDividendsUnitTrustsInvestmentCompanies.p2"))
+    @paragraph(messages("ukDividendsSharesAndLoansFromLimitedCompanies.detail.understandingDividendsUnitTrustsInvestmentCompanies.p3"))
+    @paragraph(messages("ukDividendsSharesAndLoansFromLimitedCompanies.detail.understandingDividendsUnitTrustsInvestmentCompanies.p4"))
+}
+
+@insetContent3 = {
+    @paragraph(messages("ukDividendsSharesAndLoansFromLimitedCompanies.detail.understandingFreeRedeemableShares.p1"))
+    @paragraph(messages("ukDividendsSharesAndLoansFromLimitedCompanies.detail.understandingFreeRedeemableShares.p2"))
+    @paragraph(messages("ukDividendsSharesAndLoansFromLimitedCompanies.detail.understandingFreeRedeemableShares.p3"))
+}
+
+@insetContent4 = {
+    @paragraph(messages("ukDividendsSharesAndLoansFromLimitedCompanies.detail.understandingCloseCompanyLoans.p1"))
+}
 
 @layout(pageTitle = title(form, messages("ukDividendsSharesAndLoansFromLimitedCompanies.agent.title")), taxYear = taxYear) {
 
@@ -16,14 +60,44 @@
             @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "UkDividendsSharesAndLoansFromLimitedCompanies")))
         }
 
+        @heading(messages("ukDividendsSharesAndLoansFromLimitedCompanies.agent.heading"))
+
+        @govukDetails(
+            Details(
+                summary = Text(messages("ukDividendsSharesAndLoansFromLimitedCompanies.detail.understandingDividends.summary")),
+                content = HtmlContent(insetContent1)
+            )
+        )
+
+        @govukDetails(
+            Details(
+                summary = Text(messages("ukDividendsSharesAndLoansFromLimitedCompanies.detail.understandingDividendsUnitTrustsInvestmentCompanies.summary")),
+                content = HtmlContent(insetContent2)
+            )
+        )
+
+        @govukDetails(
+            Details(
+                summary = Text(messages("ukDividendsSharesAndLoansFromLimitedCompanies.detail.understandingFreeRedeemableShares.summary")),
+                content = HtmlContent(insetContent3)
+            )
+        )
+
+        @govukDetails(
+            Details(
+                summary = Text(messages("ukDividendsSharesAndLoansFromLimitedCompanies.detail.understandingCloseCompanyLoans.summary")),
+                content = HtmlContent(insetContent4)
+            )
+        )
+
         @govukCheckboxes(
             CheckboxesViewModel(
                 form     = form,
-                idPrefix = "UkDividendsSharesAndLoansFromLimitedCompanies",
+                idPrefix  = "UkDividendsSharesAndLoansFromLimitedCompanies",
                 name     = "value[]",
-                legend   = LegendViewModel(messages("ukDividendsSharesAndLoansFromLimitedCompanies.agent.heading")).asPageHeading(),
+                legend   = LegendViewModel(messages("ukDividendsSharesAndLoansFromLimitedCompanies.agent.legend")).asPageHeading(),
                 items    = UkDividendsSharesAndLoansFromLimitedCompanies.agentCheckboxItems
-            )
+            ).withHint(Hint(content = Text(messages(s"site.hint.selectAll"))))
         )
 
         @govukButton(
