--- a/app/views/workandbenefits/ConstructionIndustrySchemeAgentView.scala.html
+++ b/app/views/workandbenefits/ConstructionIndustrySchemeAgentView.scala.html
@@ -49,7 +49,7 @@
             @govukErrorSummary(ErrorSummaryViewModel(form))
         }
 
-        @heading(messages("constructionIndustryScheme.title"))
+        @heading(messages("constructionIndustryScheme.agent.title"))
 
         @govukDetails(Details(
             summary = Text(messages("constructionIndustryScheme.summary")),
