--- a/app/views/workandbenefits/ConstructionIndustrySchemeView.scala.html
+++ b/app/views/workandbenefits/ConstructionIndustrySchemeView.scala.html
@@ -32,7 +32,7 @@
 @(form: Form[_], mode: Mode, taxYear: Int)(implicit request: Request[_], messages: Messages)
 
 @insetContent1 = {
-    @paragraph(messages("constructionIndustryScheme.agent.p1"))
+    @paragraph(messages("constructionIndustryScheme.p1"))
     @list(elements = Seq(
         Html(messages("constructionIndustryScheme.bullet1")),
         Html(messages("constructionIndustryScheme.bullet2"))
